--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ Just selection, payment, customization—then they leave.`,
           )}`;
 
           if (currentIndex === 0) {
-            image.src = "images/haohao_paint.png";
+            image.src = "./images/haohao_paint.png";
             image.alt = "Haohao's drawing";
             image.style.display = "block";
           } else {
