--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 他说：“儿子小时候爱吃绿豆糕，现在我也每周给浩浩买一份。”
 
-我们试图劝他，他却越来越排斥干预。“你们不懂，他不是你们的孩子。”他说这话的时候眼睛血红，青筋都起来了。我们从来没见过他那么生气的样子，我们也就不敢在说什么。
+我们试图劝他，他却越来越排斥干预。“你们不懂，他不是你们的孩子。”他说这话的时候眼睛血红，青筋都起来了。我们从来没见过他那么生气的样子，我们也就不敢再说什么。
 
 现在他几乎和邻居断了联系，也拒绝了线下活动。最让我们难受的是，他拒绝公司上门进行审查更新，说“浩浩不喜欢被人拆开检查”。所以我们没人知道李振国现在到底怎么样了，希望他还好吧。”`,
           en: `“Sir, to be honest, our intentions were good. We wanted to ease the loneliness of elderly people in the community, so we launched the DreamyBot pilot program. Some bereaved and empty-nest seniors did say the robot companions reduced their loneliness, and we were glad to hear that.
