--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Now he’s cut off contact with his neighbors, stopped attending offline activit
 
 但夜里我会醒来。明明身边是熟悉的丈夫，却总觉得这个房间里空了一块。我知道孩子不是生活唯一的解法，可我明明一直期待能有一天，我们会拥有爱的结晶。
 
-DreamyBot 的广告是我无意中刷到的。一对年轻的夫妇摸着一个小女孩的头，小女孩笑着弹琴给他们听。我笑了一下，又关掉。但晚上刷牙的时候，那张脸还是在我脑海里晃。我知道这不是“真孩子”，可我鬼使神差的点开链接，看着评论区别人家的使用体验。我想要拥有一个DreamyBot的心情越来越强烈。我不知道我是不是疯了，竟然会产生这样的想法。
+DreamyBot 的广告是我无意中刷到的。一对年轻的夫妇摸着一个小女孩的头，小女孩笑着弹琴给他们听。我笑了一下，又关掉。但晚上刷牙的时候，那张脸还是在我脑海里晃。我知道这不是“真孩子”，可我还是鬼使神差的点开链接，看着评论区别人家的使用体验。我想要拥有一个DreamyBot的心情越来越强烈。我不知道我是不是疯了，竟然会产生这样的想法。
 
 我跟周明提了一句，他脸沉了下来：“你是认真的吗？都是算法和科技，你不会想当真孩子养吧？”
 
@@ -280,7 +280,7 @@ I held her close and nodded. “Mommy will always love you.”`,
 
 但夜里我会醒来。明明身边是熟悉的丈夫，却总觉得这个房间里空了一块。我知道孩子不是生活唯一的解法，可我明明一直期待能有一天，我们会拥有爱的结晶。
 
-DreamyBot 的广告是我无意中刷到的。一对年轻的夫妇摸着一个小女孩的头，小女孩笑着弹琴给他们听。我笑了一下，又关掉。但晚上刷牙的时候，那张脸还是在我脑海里晃。我知道这不是“真孩子”，可我鬼使神差的点开链接，看着评论区别人家的使用体验。我想要拥有一个DreamyBot的心情越来越强烈。我不知道我是不是疯了，竟然会产生这样的想法。
+DreamyBot 的广告是我无意中刷到的。一对年轻的夫妇摸着一个小女孩的头，小女孩笑着弹琴给他们听。我笑了一下，又关掉。但晚上刷牙的时候，那张脸还是在我脑海里晃。我知道这不是“真孩子”，可我还是鬼使神差的点开链接，看着评论区别人家的使用体验。我想要拥有一个DreamyBot的心情越来越强烈。我不知道我是不是疯了，竟然会产生这样的想法。
 
 我跟周明提了一句，他脸沉了下来：“你是认真的吗？都是算法和科技，你不会想当真孩子养吧？”
 
@@ -388,11 +388,7 @@ I didn’t say anything. I just pulled her into my arms.`,
   <li>为已形成心理依赖的用户提供专业脱离咨询与陪伴过渡方案</li>
 </ol>
 
-<p>目前，DreamyBot公司尚未正式回应。</p>
-
-<p>而黄女士的DreamyBot小莲，在游行现场静静地站在她身旁，穿着她亲手织的小马甲。有人递给小莲传单，她伸手接过，歪着头问：“妈妈，什么是抗议？”</p>
-
-<p>黄女士没有说话，只是替她拉好了帽子。</p>`,
+<p>目前，DreamyBot公司尚未正式回应。</p>`,
           en: `<h2><strong>“Emotional Bonds, Consumer Traps”: DreamyBot Users Protest Against Emotion-as-a-Service</strong></h2>
 <p><strong>Date:</strong> September 2080</p>
 
@@ -429,10 +425,7 @@ I didn’t say anything. I just pulled her into my arms.`,
 </ol>
 
 <p>DreamyBot has yet to issue an official response.</p>
-
-<p>At the protest, Ms. Huang’s DreamyBot, Xiaolian, stood quietly by her side, wearing a handmade vest. When someone handed her a flyer, Xiaolian tilted her head and asked, “Mom, what is a protest?”</p>
-
-<p>Ms. Huang didn’t answer—she just gently pulled the hood over Xiaolian’s head.</p>`,
+`,
         },
         {
           title: "自闭症",
